--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -771,6 +771,22 @@
     <string name="top_left">Top left</string>
     <string name="top_center">Top center</string>
     <string name="top_right">Top right</string>
+	<!-- Actor Bottom Sheet Strings -->
+    <string name="actor_birth">Birth:</string>
+    <string name="actor_death">Death:</string>
+    <string name="actor_age">Age:</string>
+    <string name="actor_gender">Gender:</string>
+    <string name="actor_birthplace">Birthplace:</string>
+    <string name="actor_biography">Biography</string>
+    <string name="actor_years_old">years old</string>
+    <string name="actor_female">Female</string>
+    <string name="actor_male">Male</string>
+    <string name="actor_not_specified">Not specified</string>
+    <string name="actor_unknown">Unknown</string>
+    <string name="actor_loading">Loading biography...</string>
+    <string name="actor_no_biography">No biography available</string>
+    <string name="actor_error">Error loading actor details</string>
+    <string name="actor_search_web">Search on web</string>
 
     <plurals name="downloads_active">
         <item quantity="one">%d active download</item>
